--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -8,6 +8,7 @@
     tools:context=".FeedListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list"
         android:layout_width="409dp"
         android:layout_height="729dp"
         android:layout_marginStart="1dp"
