--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -85,7 +85,7 @@
                 android:layout_marginEnd="8dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/baseline_favorite_24" />
+                app:srcCompat="@drawable/red_heart" />
 
             <ImageButton
                 android:id="@+id/ringing_phone"
