--- a/app/src/main/res/layout/post_list_row.xml
+++ b/app/src/main/res/layout/post_list_row.xml
@@ -83,9 +83,9 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginEnd="8dp"
-                android:background="@android:color/transparent"
+                android:background="?attr/selectableItemBackground"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/baseline_favorite_24" />
+                app:srcCompat="@drawable/heart" />
 
             <ImageButton
                 android:id="@+id/ringing_phone"
